<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0
                             http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>

  <groupId>org.github.valtoni</groupId>
  <artifactId>java-modern-concurrency</artifactId>
  <version>1.0</version>

  <properties>
    <maven.compiler.source>22</maven.compiler.source>
    <maven.compiler.target>22</maven.compiler.target>
    <enable.preview>true</enable.preview>
  </properties>

  <build>
    <plugins>
      <!-- Plugin do compilador com preview -->
      <plugin>
        <artifactId>maven-compiler-plugin</artifactId>
        <version>3.11.0</version>
        <configuration>
          <release>22</release>
          <compilerArgs>
            <arg>--enable-preview</arg>
          </compilerArgs>
        </configuration>
      </plugin>

      <!-- Exec plugin pra rodar direto -->
      <plugin>
        <groupId>org.codehaus.mojo</groupId>
        <artifactId>exec-maven-plugin</artifactId>
        <version>3.1.0</version>
        <configuration>
          <mainClass>org.github.valtoni.concurrency.scopedvalue.ScopedValuePropagation</mainClass>
          <commandlineArgs></commandlineArgs>
          <arguments>
            <argument>--enable-preview</argument>
          </arguments>
        </configuration>
      </plugin>
    </plugins>
  </build>
</project>
